--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ input {
     display:inline-block;
 }
 input[type=submit],
-#produit div a {
+#produit div a, .deconnect {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     font-weight: 700;
@@ -139,6 +139,11 @@ input[type=submit],
 }
 #contact form div input {
     width: 165px;
+}
+
+.errorMessage {
+    color: red !important;
+    font-size: 120%;
 }
 
 table {
